# Win11SysCheck

./: .gitignore  CMakeLists.txt  README.md  Win11SysCheck.code-workspace
.github/: FUNDING.yml
.github/workflows/: build.yml
include/: abstract_singleton.hpp  application.hpp  basic_log.hpp  d3d_impl.hpp  error_handler.hpp  fa-brands-400.h  fa-solid-900.h  i18n.hpp  log_helper.hpp  main.h  main_ui.hpp  pch.hpp  simple_timer.hpp  sys_check.hpp  ui_types.hpp  widget.hpp  window.hpp
src/: application.cpp  d3d_impl.cpp  entry.cpp  i18n.cpp  log_helper.cpp  main.cpp  main_ui.cpp  sys_check.cpp  ui_types.cpp  widget.cpp  window.cpp
